--- a/Fttx-Orm/Views/RoleSurecs/Create.cshtml
+++ b/Fttx-Orm/Views/RoleSurecs/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Role Süreç Oluştur</h2>
 
 
 @using (Html.BeginForm()) 
@@ -16,42 +16,113 @@
         <h4>RoleSurec</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.RoleId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RoleId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RoleId, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.RoleId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <link rel="stylesheet" href="~/Content/dropdown.css" />
+                <script src="~/Scripts/dropdown.js" type="text/javascript"></script>
+                <div tabindex="0" class="Jdropdown" style="z-index:4">
+                    <div class="dropdown-a"></div>
+                    <span>-- Seçiniz ! --</span>
+                    <input id="RoleId" name="RoleId" type="hidden" value="" />
+                    <input type="text" placeholder="Ara" /><i class="fa fa-search"></i>
+                    <div class="options">
+
+                        <ul>
+                            <li>-- Seçiniz ! --</li>
+                            @foreach (var item in ViewBag.RoleId)
+                            {
+                                <li id="@item.Value" onclick="gonder(@item.Value)">@item.Text</li>
+                            }
+
+                        </ul>
+                        <script>
+                            function gonder(id) {
+                                document.getElementById('RoleId').value = id;
+                            }
+
+                        </script>
+                    </div>
+                </div>
+                @Html.ValidationMessageFor(model => model.RoleId, "", new { @class = "text-danger", @style = "position:relative;top:31px;" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.SurecId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SurecId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SurecId, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.SurecId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <div tabindex="0" class="Jdropdown" style="z-index:3">
+                    <div class="dropdown-a"></div>
+                    <span>-- Seçiniz ! --</span>
+                    <input id="SurecId" name="SurecId" type="hidden" value="" />
+                    <input type="text" placeholder="Ara" /><i class="fa fa-search"></i>
+                    <div class="options">
+
+                        <ul>
+                            <li>-- Seçiniz ! --</li>
+                            @foreach (var item in ViewBag.SurecId)
+                            {
+                                <li id="@item.Value" onclick="gonder2(@item.Value)">@item.Text</li>
+                            }
+
+                        </ul>
+                        <script>
+                            function gonder2(id) {
+                                document.getElementById('SurecId').value = id;
+                            }
+
+                        </script>
+                    </div>
+                </div>
+                @Html.ValidationMessageFor(model => model.SurecId, "", new { @class = "text-danger", @style = "position:relative;top:31px;" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="height:40px">
             @Html.LabelFor(model => model.IsId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IsId, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.IsId, new { htmlAttributes = new { @class = "form-control" } })*@
+                <div tabindex="0" class="Jdropdown" style="z-index:2">
+                    <div class="dropdown-a"></div>
+                    <span>-- Seçiniz ! --</span>
+                    <input id="IsId" name="IsId" type="hidden" value="" />
+                    <input type="text" placeholder="Ara" /><i class="fa fa-search"></i>
+                    <div class="options">
+
+                        <ul>
+                            <li>-- Seçiniz ! --</li>
+                            @foreach (var item in ViewBag.IsId)
+                            {
+                                <li id="@item.Value" onclick="gonder3(@item.Value)">@item.Text</li>
+                            }
+
+                        </ul>
+                        <script>
+                            function gonder3(id) {
+                                document.getElementById('IsId').value = id;
+                            }
+
+                        </script>
+                    </div>
+                </div>
+                @Html.ValidationMessageFor(model => model.IsId, "", new { @class = "text-danger", @style = "position:relative;top:31px;" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Oluştur" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("<< Geri dön", "Index")
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
