--- a/Fttx-Orm/Views/IsPlanTarihs/Index.cshtml
+++ b/Fttx-Orm/Views/IsPlanTarihs/Index.cshtml
@@ -51,7 +51,7 @@
 
 </table>*@
 
-<div class="loading">
+@*<div class="loading">
     <i class="fa fa-refresh fa-spin"></i>
     Veriler Yükleniyor...
 </div>
@@ -200,4 +200,72 @@
     });
 
 
+</script>*@
+<style>
+    #calendar-container {
+        width:70%;
+        background-color:#ffffff;
+        
+    }
+    .fc-title{
+        font-size: 8px;
+    }
+     #calendar {
+        width:100%;
+        height:80%;
+
+    }
+     button{
+         width: auto;
+     }
+</style>
+
+<div id='calendar-container'>
+    <div id='calendar'></div>
+</div>
+
+<link href="~/Content/fullcalendar.min.css" rel="stylesheet" />
+<script src="~/Scripts/moment.min.js"></script>
+<script src="~/Scripts/fullcalendar.min.js"></script>
+<script>
+    $(document).ready(function () {
+        /* initialize the calendar
+        -----------------------------------------------------------------*/
+
+        $('#calendar').fullCalendar({
+            header: {
+                left: 'prev,next today',
+                center: 'title',
+                right: 'month,agendaWeek,agendaDay'
+            },
+            editable: true,
+            droppable: true, // this allows things to be dropped onto the calendar
+            dragRevertDuration: 0,
+            drop: function () {
+                // is the "remove after drop" checkbox checked?
+                if ($('#drop-remove').is(':checked')) {
+                    // if so, remove the element from the "Draggable Events" list
+                    $(this).remove();
+
+                }
+            },
+            eventClick: function (event) {
+
+            },
+            eventDragStop: function (event, jsEvent, ui, view) {
+
+                if (isEventOverDiv(jsEvent.clientX, jsEvent.clientY)) {
+                    $('#calendar').fullCalendar('removeEvents', event._id);
+                    var el = $("<div class='fc-event'>").appendTo('#external-events-listing').text(event.title);
+                    el.draggable({
+                        zIndex: 999,
+                        revert: true,
+                        revertDuration: 0
+                    });
+                    el.data('event', { title: event.title, id: event.id, stick: true });
+                }
+            },
+            events: ["a"]
+        });
+    });
 </script>
